# bottom-up-artificial-intelligence

./: .gitignore  LICENSE  README.md
project0/: Project_detail.md
project0/ai_project/: CMakeLists.txt  main.cc
project0/ai_project/ai/: CMakeLists.txt
project0/ai_project/ai/include/: decimal.h  matrix.h
project0/ai_project/ai/src/: decimal.cc  matrix.cc
project0/ai_project/test/: basic_test.cc
project1/: Project_detail.md
project1/ai_project/: main.cc
project1/ai_project/ai/include/: decimal.h  matrix.h  neural_network.h
project1/ai_project/ai/src/: decimal.cc  matrix.cc  neural_network.cc
project2/: Project_detail.md
project2/ai_project/ai/: CMakeLists.txt
project2/ai_project/ai/include/: neural_network.h
project2/ai_project/ai/src/: matrix.cc  neural_network.cc
project2/ai_project/test/: CMakeLists.txt  basic_test.cc
